getting redy to deploy to heroku

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h2> About us page </h2>
-<p> lorem ipsum sdlkfj sdiu wef.z oiwefj zlihwe ef ij luerh efxc skduthg i lkie to  fuck all of the firl s in the whole gucking wotld  </p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
