--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,5 @@
+<div class="jumbotron">
+    <div class="container">
 <h2> contact us page </h2>
 <p> heres a lsit of my soscial account where you chose which prefer to contact me throw:</p>
 <ul>
@@ -6,3 +8,5 @@
 <li>email</li>
 <li>direct call/whatsapp</li>
 </ul>
+</div>
+</div>
