--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   
   <h2>Sign up</h2>
@@ -24,3 +25,4 @@
 <center>
   or <%= render "devise/shared/links" %>
 </center>
+</div>
