--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
         </li>
         <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Tweets", tweets_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Admin", admin_path, class: "nav-link" %></li>
         <% if user_signed_in? %>
         <li class="nav=item"><%= link_to "Logout", signout_path,method: :delete, class:"nav-link" %> </li>
         <% else %>
