--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,6 +2,24 @@
     margin-bottom: 1em;
 }
 
+.navbar-brand{
+    // margin-left:88px;
+}
+li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+nav{
+    background: rgb(185, 185, 185);
+}
+
 a {
-    color:yellowgreen;
+    color:rgb(48, 106, 214);
+}
+
+.kkk{
+    color: red;
+    float: right;
+    left: 640px;
+    position: relative;
 }
