--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 <div class="jumbotron jumbotron-home">
     <div class="container">
-    <h1 style="color:red;font-size:90px;"> Hello, <% current_user.email %> !</h1>
+    <h1 style="color:red;font-size:90px;"> Hello, <%= current_user.email %> !</h1>
     </div>
     </div>
 <% else %>
