--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,36 +1,38 @@
 <div class="container">
 <h1>Tweets</h1>
+<% if user_signed_in? %>
+<%= link_to 'New Tweet', new_tweet_path , class: "btn btn-primary", style: "float:right;"%>
+<% end %>
+<div class="row">
+<div class="col-sm-4">
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">  <%= current_user.email %> </h5>
+    <p class="card-text">Member since <%= current_user.created_at.to_datetime.strftime('%b %Y') %>
+    </p>
+    <a href="#" class="btn btn-primary">Visit Profile</a>
+  </div>
+</div>
 
-  <tbody>
+</div>
+</div>
+
+<ul class="list-group">
     <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.user.email %></td>
-        <td><%= tweet.content %></td>
-        <td><%= link_to 'Show', tweet %></td>
+      <li class="list-group-item">
+        <%= content_tag(:h4, tweet.user.email, class: "text-success") %>
+        <%= content_tag(:p, tweet.content, class: "text-warning") %>
+        <%= link_to 'Show', tweet %>
         <% if tweet.user == current_user %>
-          <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-          <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% else %>
-          <td> Edit </td>
-          <td> Destroy</td>
+          <%= link_to 'Edit', edit_tweet_path(tweet) %>
+          <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %>
           <% end %>
-      </tr>
+          </li>
     <% end %>
-  </tbody>
-</table>
+</ul>
 
 <br>
 
-<% if user_signed_in? %>
-<%= link_to 'New Tweet', new_tweet_path %>
-<% end %>
+
 </div>
