Added username and name to DB

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
         <li class="nav-item kkk"><%= link_to "Logout", signout_path,method: :delete, class:"nav-link" %> </li>
         <% else %>
         <li class="nav-item kkk"><%= link_to "Sign-in", signin_path, class:"nav-link" %> </li>
+        <li class="nav-item kkk"><%= link_to "Sign-up", signup_path, class:"nav-link" %> </li>
         <% end %>
         <li class="nav-item kkk dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
