--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,16 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
+  <%= f.label :username %>
+  <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "username must be uniq" %>
+</div>
+
+<div class="form-group">
+<%= f.label :name %>
+<%= f.text_field :name, autofocus: true, class: "form-control", placeholder: "your given name" %>
+</div>
+
+  <div class="form-group">
     <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "user@example.com" %>
   </div>
