Added follow/unfollow with feed page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -25,6 +25,8 @@
         </li>
         <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
         <li class="nav-item"><%= link_to "Contact", contact_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Users", allusers_path, class: "nav-link" %></li>
+
         <% if user_signed_in? %>
         <li class="nav-item kkk"><%= link_to "Logout", signout_path,method: :delete, class:"nav-link" %> </li>
         <% else %>
@@ -59,7 +61,7 @@
 
     <!-- Page Content -->
     <%= yield %>
-    
+
     <!-- Footer -->
     <footer class="small text-muted">
       <div class="container">
