--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,14 @@
 <h1> <%= @user.email %> </h1>
 <p> <%= @user.username %> </p>
 <p> <%= @user.name %> </p>
+<% if current_user.following?(@user) %>
+<p> <%= link_to "Unfollow", unfollow_user_path(@user.username), method: :delete %> </p>
+<% elsif current_user.email == @user.email %>
+<p>YOU CANT FOLLOW YOURSELF, Dutty!</p>
+<% else %>
+<p> <%= link_to "Follow", follow_user_path(@user.username), method: :post %> </p>
+<% end %>
+
 <h4> Tweets: </h4>
 <ul class="list-group">
     <% @tweets.each do |tweet| %>
