--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,6 +6,7 @@
 <div class="row">
 <div class="col-sm-4">
 
+<% if user_signed_in? %>
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">  <%= current_user.name %> </h4>
@@ -15,6 +16,7 @@
     <a href="#" class="btn btn-primary">Visit Profile</a>
   </div>
 </div>
+<% end %>
 
 </div>
 </div>
