--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-<p id="notice"><%= notice %></p>
 
 <h1>Items</h1>
 <%= link_to 'New Item', new_item_path, class: "btn btn-primary", style: "float:right;" %>
@@ -7,8 +6,18 @@
     <ul class="list-group">
     <% @items.each do |item| %>
       <li class="list-group-item">
+        <% if user_signed_in? %>
+        <% if current_user.voted_for? item %>
+          <%= link_to 'Unvote', unvote_item_path(item),method: :delete, class: "btn btn-primary", style: "float:right; margin-left:10px;" %>
+          <% else %>
+          <%= link_to 'Vote', vote_item_path(item),method: :post , class: "btn btn-primary", style: "float:right; margin-left:10px;" %>
+        <% end %>
+        <% end %>
+
+          <p style="float: right;"><%= item.votes_for.up.size %></p>
         <%= content_tag(:h4, item.user.email, class: "text-success") %>
         <%= content_tag(:p, item.text, class: "text-warning") %>
+        <%= item.title %>
         <%= content_tag(:p, item.url, class: "text-danger") %>
         <%= link_to 'Show', item %>
         <% if item.user == current_user %>
