--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+ <p>
   <strong>User:</strong>
-  <%= @item.user %>
+  <%= @item.user.email %>
 </p>
 
 <p>
