--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,4 @@
+<div class="contianer">
 <p id="notice"><%= notice %></p>
 
  <p>
@@ -24,3 +25,4 @@
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <% end %>
 <%= link_to 'Back', items_path %>
+</div>
